--- a/,github/workflows/deploy.yml
+++ b/,github/workflows/deploy.yml
@@ -1,13 +1,19 @@
-name: Deploy to GitHub Pages
+name: Deploy
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
+
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -18,26 +24,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup Node
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          
-      - name: Install Dependencies
+          node-version: 18
+          cache: 'npm'
+      - name: Install dependencies
         run: npm install
-        
       - name: Build
         run: npm run build
-        
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
-          
+          path: 'dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
